<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/add_bathroom_title"
            android:textColor="@color/light_purple"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/add_bathroom_place"
            android:textColor="@color/light_purple"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <EditText
            android:id="@+id/add_bathroom_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/add_bathroom_address"
            android:textColor="@color/light_purple"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <EditText
            android:id="@+id/add_bathroom_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:background="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/add_bathroom_city"
            android:textColor="@color/light_purple"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <EditText
            android:id="@+id/add_bathroom_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/add_bathroom_state"
            android:textColor="@color/light_purple"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <EditText
            android:id="@+id/add_bathroom_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/add_bathroom_country"
            android:textColor="@color/light_purple"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <Spinner
            android:id="@+id/add_bathroom_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/add_bathroom_accessible"
            android:textColor="@color/light_purple"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <Spinner
            android:id="@+id/add_bathroom_accessible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/add_bathroom_unisex"
            android:textColor="@color/light_purple"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <Spinner
            android:id="@+id/add_bathroom_unisex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/action_directions"
            android:textColor="@color/light_purple"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <EditText
            android:id="@+id/add_bathroom_directions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/add_bathroom_direction_hint"
            android:background="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/add_bathroom_comment"
            android:textColor="@color/light_purple"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <EditText
            android:id="@+id/add_bathroom_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/add_bathroom_comment_hint"
            android:background="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/add_bathroom_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_bathroom_save"
            android:background="@color/light_purple"
            android:textColor="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

</ScrollView>