<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="8dp"
    android:background="@color/light_purple"
    tools:context=".MainActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
	    android:orientation="vertical"
        android:padding="8dp"
        >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:padding="4dp"
            android:layout_margin="8dp"
            android:background="@color/purple"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

	    <EditText
	        android:id="@+id/searchText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_margin="8dp"
	        android:inputType="text"
	        android:hint="@string/search_hint" >
	
	    </EditText>
    
        <Button
            android:id="@+id/button_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSearch"
            android:text="@string/search_button" />

        <Button
            android:id="@+id/button_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:onClick="onClickLocation"
            android:text="@string/search_location_button" />

	    <Button
	        android:id="@+id/button_add"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:enabled="false"
	        android:onClick="onClickAdd"
	        android:text="@string/add_button" />
	    
        <Button
            android:id="@+id/button_about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAbout"
            android:text="@string/about_button" />
    
	</LinearLayout>
</FrameLayout>